refine routes and swagger
